; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_update-index.c_xstat_mtime_dir.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_update-index.c_xstat_mtime_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.stat = type { i32 }

@mtime_dir = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [18 x i8] c"failed to stat %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stat*)* @xstat_mtime_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xstat_mtime_dir(%struct.stat* %0) #0 {
  %2 = alloca %struct.stat*, align 8
  store %struct.stat* %0, %struct.stat** %2, align 8
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @mtime_dir, i32 0, i32 0), align 4
  %4 = load %struct.stat*, %struct.stat** %2, align 8
  %5 = call i64 @stat(i32 %3, %struct.stat* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = call i32 @_(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @mtime_dir, i32 0, i32 0), align 4
  %10 = call i32 @die_errno(i32 %8, i32 %9)
  br label %11

11:                                               ; preds = %7, %1
  ret i32 0
}

declare dso_local i64 @stat(i32, %struct.stat*) #1

declare dso_local i32 @die_errno(i32, i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
